- Fixed bug #55137 (Changing trait static method visibility)